Fix horizontal overflow

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     width: 100vw;
     height: 100vh;
+    max-width: 100%;
     background-color: #343a40;
 
     color: #fff;
